policies/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-pod-policy-tests
policies:
  - deny-host-access-and-privileged.yaml
  - disable_automount.yaml
  - enforce-restricted-pod-security.yaml
  - verify-images-and-allowlist.yaml
resources:
  - bad-pod.yaml
results:
  - policy: deny-host-access-and-privileged
    rule: deny-privileged-and-host-mounts
    resource: bad-pod
    kind: Pod
    result: fail
  - policy: disable-automount-serviceaccount-token
    rule: set-automount-false
    resource: bad-pod
    kind: Pod
    result: fail
  - policy: enforce-restricted-pod-security
    rule: restricted-pod
    resource: bad-pod
    kind: Pod
    result: fail
  - policy: verify-images-and-allowlist
    rule: require-allowlisted-registries
    resource: bad-pod
    kind: Pod
    result: fail
